y.output
Terminals which are not used

   TOKEN_NOT
   TOKEN_NULL
   TOKEN_KEY
   TOKEN_PRIMARY
   TOKEN_INTO
   TOKEN_INSERT
   TOKEN_VALUES
   TOKEN_DELETE
   TOKEN_FROM
   TOKEN_WHERE
   TOKEN_UPDATE
   TOKEN_SET
   TOKEN_SELECT
   TOKEN_IS
   TOKEN_INT
   TOKEN_VARCHAR
   TOKEN_DESC
   TOKEN_AND
   TOKEN_DATE
   TOKEN_FLOAT
   TOKEN_FOREIGN
   TOKEN_REFERENCES


Grammar

    0 $accept: program $end

    1 program: stmt

    2 stmt: sysStmt ';'
    3     | dbStmt ';'
    4     | tbStmt ';'
    5     | idxStmt ';'

    6 sysStmt: TOKEN_SHOW TOKEN_DATABASES

    7 dbStmt: TOKEN_CREATE TOKEN_DATABASE TOKEN_STRING_IDENTIFIER
    8       | TOKEN_DROP TOKEN_DATABASE TOKEN_STRING_IDENTIFIER
    9       | TOKEN_USE TOKEN_STRING_IDENTIFIER
   10       | TOKEN_SHOW TOKEN_TABLES

   11 tbStmt: TOKEN_DROP TOKEN_TABLE TOKEN_STRING_IDENTIFIER

   12 idxStmt: TOKEN_CREATE TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER
   13        | TOKEN_DROP TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
';' (59) 2 3 4 5
error (256)
TOKEN_CREATE (258) 7 12
TOKEN_DATABASE (259) 7 8
TOKEN_DATABASES (260) 6
TOKEN_DROP (261) 8 11 13
TOKEN_USE (262) 9
TOKEN_SHOW (263) 6 10
TOKEN_TABLE (264) 11
TOKEN_TABLES (265) 10
TOKEN_NOT (266)
TOKEN_NULL (267)
TOKEN_KEY (268)
TOKEN_PRIMARY (269)
TOKEN_INTO (270)
TOKEN_INSERT (271)
TOKEN_VALUES (272)
TOKEN_DELETE (273)
TOKEN_FROM (274)
TOKEN_WHERE (275)
TOKEN_UPDATE (276)
TOKEN_SET (277)
TOKEN_SELECT (278)
TOKEN_IS (279)
TOKEN_INT (280)
TOKEN_VARCHAR (281)
TOKEN_DESC (282)
TOKEN_INDEX (283) 12 13
TOKEN_AND (284)
TOKEN_DATE (285)
TOKEN_FLOAT (286)
TOKEN_FOREIGN (287)
TOKEN_REFERENCES (288)
TOKEN_STRING_IDENTIFIER (289) 7 8 9 11 12 13


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
stmt (38)
    on left: 2 3 4 5, on right: 1
sysStmt (39)
    on left: 6, on right: 2
dbStmt (40)
    on left: 7 8 9 10, on right: 3
tbStmt (41)
    on left: 11, on right: 4
idxStmt (42)
    on left: 12 13, on right: 5


state 0

    0 $accept: . program $end

    TOKEN_CREATE  shift, and go to state 1
    TOKEN_DROP    shift, and go to state 2
    TOKEN_USE     shift, and go to state 3
    TOKEN_SHOW    shift, and go to state 4

    program  go to state 5
    stmt     go to state 6
    sysStmt  go to state 7
    dbStmt   go to state 8
    tbStmt   go to state 9
    idxStmt  go to state 10


state 1

    7 dbStmt: TOKEN_CREATE . TOKEN_DATABASE TOKEN_STRING_IDENTIFIER
   12 idxStmt: TOKEN_CREATE . TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER

    TOKEN_DATABASE  shift, and go to state 11
    TOKEN_INDEX     shift, and go to state 12


state 2

    8 dbStmt: TOKEN_DROP . TOKEN_DATABASE TOKEN_STRING_IDENTIFIER
   11 tbStmt: TOKEN_DROP . TOKEN_TABLE TOKEN_STRING_IDENTIFIER
   13 idxStmt: TOKEN_DROP . TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER

    TOKEN_DATABASE  shift, and go to state 13
    TOKEN_TABLE     shift, and go to state 14
    TOKEN_INDEX     shift, and go to state 15


state 3

    9 dbStmt: TOKEN_USE . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 16


state 4

    6 sysStmt: TOKEN_SHOW . TOKEN_DATABASES
   10 dbStmt: TOKEN_SHOW . TOKEN_TABLES

    TOKEN_DATABASES  shift, and go to state 17
    TOKEN_TABLES     shift, and go to state 18


state 5

    0 $accept: program . $end

    $end  shift, and go to state 19


state 6

    1 program: stmt .

    $default  reduce using rule 1 (program)


state 7

    2 stmt: sysStmt . ';'

    ';'  shift, and go to state 20


state 8

    3 stmt: dbStmt . ';'

    ';'  shift, and go to state 21


state 9

    4 stmt: tbStmt . ';'

    ';'  shift, and go to state 22


state 10

    5 stmt: idxStmt . ';'

    ';'  shift, and go to state 23


state 11

    7 dbStmt: TOKEN_CREATE TOKEN_DATABASE . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 24


state 12

   12 idxStmt: TOKEN_CREATE TOKEN_INDEX . TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 25


state 13

    8 dbStmt: TOKEN_DROP TOKEN_DATABASE . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 26


state 14

   11 tbStmt: TOKEN_DROP TOKEN_TABLE . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 27


state 15

   13 idxStmt: TOKEN_DROP TOKEN_INDEX . TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 28


state 16

    9 dbStmt: TOKEN_USE TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 9 (dbStmt)


state 17

    6 sysStmt: TOKEN_SHOW TOKEN_DATABASES .

    $default  reduce using rule 6 (sysStmt)


state 18

   10 dbStmt: TOKEN_SHOW TOKEN_TABLES .

    $default  reduce using rule 10 (dbStmt)


state 19

    0 $accept: program $end .

    $default  accept


state 20

    2 stmt: sysStmt ';' .

    $default  reduce using rule 2 (stmt)


state 21

    3 stmt: dbStmt ';' .

    $default  reduce using rule 3 (stmt)


state 22

    4 stmt: tbStmt ';' .

    $default  reduce using rule 4 (stmt)


state 23

    5 stmt: idxStmt ';' .

    $default  reduce using rule 5 (stmt)


state 24

    7 dbStmt: TOKEN_CREATE TOKEN_DATABASE TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 7 (dbStmt)


state 25

   12 idxStmt: TOKEN_CREATE TOKEN_INDEX TOKEN_STRING_IDENTIFIER . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 29


state 26

    8 dbStmt: TOKEN_DROP TOKEN_DATABASE TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 8 (dbStmt)


state 27

   11 tbStmt: TOKEN_DROP TOKEN_TABLE TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 11 (tbStmt)


state 28

   13 idxStmt: TOKEN_DROP TOKEN_INDEX TOKEN_STRING_IDENTIFIER . TOKEN_STRING_IDENTIFIER

    TOKEN_STRING_IDENTIFIER  shift, and go to state 30


state 29

   12 idxStmt: TOKEN_CREATE TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 12 (idxStmt)


state 30

   13 idxStmt: TOKEN_DROP TOKEN_INDEX TOKEN_STRING_IDENTIFIER TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 13 (idxStmt)
